counter wrap is no longer useful.  remove complexity here which was causing a bug when highlighting some complicated math nodes
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@11722 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_annotations.scss
+++ b/src/main/resources/scss/_annotations.scss
@@ -217,10 +217,6 @@ div.redaction-control {
 			}
 		}
 
-        .counter-container {
-   			display: inline-block;
-   			white-space: nowrap;
-        }
 
 		&.plain {
 
@@ -275,7 +271,6 @@ div.redaction-control {
 				color: #757474;
 				font-family: $font !important;
 				font-weight: bold;
-
 
 				@include highlight-tip;
 
